force-app/main/default/objects/CPR_Outbound_06_Setting__mdt/CPR_Outbound_06_Setting__mdt.object-meta.xml
<CustomObject>
    <label>CPR Outbound 06 Setting</label>
    <pluralLabel>CPR Outbound 06 Settings</pluralLabel>
</CustomObject>