force-app/main/default/objects/CPR_Outbound_06_Setting__mdt/fields/File_Prefix__c.field-meta.xml
<CustomField>
    <fullName>File_Prefix__c</fullName>
    <label>File_Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>