force-app/main/default/objects/CPR_Outbound_06_Setting__mdt/fields/Noeglekonstant__c.field-meta.xml
<CustomField>
    <fullName>Noeglekonstant__c</fullName>
    <label>Noeglekonstant</label>
    <length>15</length>
    <type>Text</type>
</CustomField>