force-app/main/default/objects/CPR_Outbound_06_Setting__mdt/fields/Opgavenummer__c.field-meta.xml
<CustomField>
    <fullName>Opgavenummer__c</fullName>
    <label>Opgavenummer</label>
    <length>6</length>
    <type>Text</type>
</CustomField>